[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/ui/buttons/attack.png" type="Texture" id=1]
[ext_resource path="res://sprites/ui/buttons/defend.png" type="Texture" id=2]
[ext_resource path="res://misc/font.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/fight_ui.gd" type="Script" id=4]
[ext_resource path="res://sprites/ui/buttons/attack-focus.png" type="Texture" id=5]
[ext_resource path="res://sprites/ui/buttons/defend-focus.png" type="Texture" id=6]
[ext_resource path="res://sprites/ui/buttons/consume.png" type="Texture" id=7]
[ext_resource path="res://sprites/ui/buttons/consume-focus.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 2.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7, 1.1, 1.4, 1.8, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true ]
}

[node name="FightUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ActMargin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 6

[node name="ActV" type="VBoxContainer" parent="ActMargin"]
margin_left = 3.0
margin_top = 3.0
margin_right = 141.0
margin_bottom = 90.0
custom_constants/separation = 3

[node name="Acts" type="HBoxContainer" parent="ActMargin/ActV"]
margin_right = 138.0
margin_bottom = 10.0
custom_constants/separation = 0

[node name="Attack" type="TextureButton" parent="ActMargin/ActV/Acts"]
margin_right = 10.0
margin_bottom = 10.0
focus_neighbour_left = NodePath("../Consume")
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
texture_focused = ExtResource( 5 )

[node name="Defend" type="TextureButton" parent="ActMargin/ActV/Acts"]
margin_left = 10.0
margin_right = 20.0
margin_bottom = 10.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_focused = ExtResource( 6 )

[node name="Consume" type="TextureButton" parent="ActMargin/ActV/Acts"]
margin_left = 20.0
margin_right = 30.0
margin_bottom = 10.0
focus_neighbour_right = NodePath("../Attack")
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
texture_focused = ExtResource( 8 )

[node name="Cards" type="HBoxContainer" parent="ActMargin/ActV"]
visible = false
margin_top = 13.0
margin_right = 138.0
margin_bottom = 13.0

[node name="Title" type="Label" parent="ActMargin/ActV"]
margin_left = 114.0
margin_top = 78.0
margin_right = 138.0
margin_bottom = 81.0
size_flags_horizontal = 8
size_flags_vertical = 10
custom_fonts/font = ExtResource( 3 )
text = "ATTACK"
align = 2

[node name="Desc" type="Label" parent="ActMargin/ActV"]
margin_left = 41.0
margin_top = 84.0
margin_right = 138.0
margin_bottom = 87.0
size_flags_horizontal = 8
size_flags_vertical = 8
custom_fonts/font = ExtResource( 3 )
text = "deals damage to the enemy"
align = 2

[node name="HPMargin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 3
custom_constants/margin_top = 10
custom_constants/margin_left = 3
custom_constants/margin_bottom = 20

[node name="HPs" type="VBoxContainer" parent="HPMargin"]
margin_left = 3.0
margin_top = 10.0
margin_right = 141.0
margin_bottom = 76.0
mouse_filter = 2

[node name="EnemyHP" type="Label" parent="HPMargin/HPs"]
margin_right = 138.0
margin_bottom = 3.0
custom_fonts/font = ExtResource( 3 )
text = "10HP"
align = 2

[node name="PlayerHP" type="Label" parent="HPMargin/HPs"]
margin_top = 63.0
margin_right = 138.0
margin_bottom = 66.0
size_flags_vertical = 10
custom_fonts/font = ExtResource( 3 )
text = "10HP"

[node name="BuffMargin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_top = 15
custom_constants/margin_left = 5

[node name="Buff" type="Label" parent="BuffMargin"]
visible = false
margin_left = 5.0
margin_top = 15.0
margin_right = 25.0
margin_bottom = 18.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "+1ATK"
align = 1

[node name="Anim" type="AnimationPlayer" parent="BuffMargin/Buff"]
anims/default = SubResource( 1 )

[connection signal="focus_entered" from="ActMargin/ActV/Acts/Attack" to="." method="_on_attack_focused"]
[connection signal="pressed" from="ActMargin/ActV/Acts/Attack" to="." method="_on_attack_pressed"]
[connection signal="focus_entered" from="ActMargin/ActV/Acts/Defend" to="." method="_on_defend_focused"]
[connection signal="pressed" from="ActMargin/ActV/Acts/Defend" to="." method="_on_defend_pressed"]
[connection signal="focus_entered" from="ActMargin/ActV/Acts/Consume" to="." method="_on_consume_focused"]
[connection signal="pressed" from="ActMargin/ActV/Acts/Consume" to="." method="_on_consume_pressed"]
